apps/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    cloudlab.kerbaras.com/gateway-access: "true"
